Fixed layout issue

--- a/src/broadcast.css
+++ b/src/broadcast.css
@@ -18,8 +18,10 @@
 }
 
 .broadcast-panel-body {
-  padding: 5px;
+  margin-left: 5px;
   overflow-y: auto;
+  overflow-x: hidden;
+  height: 50vh;
 }
 
 .broadcast-msg {
@@ -28,4 +30,23 @@
   display: block;
   white-space: nowrap;
   font-size: 13;
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 6px;
+}
+
+.scrollbar-info::-webkit-scrollbar {
+  background-color: #f5f5f5;
+}
+
+.scrollbar-info::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #33b5e5;
+}
+
+.scrollbar-info {
+  scrollbar-color: #33b5e5 #f5f5f5;
 }
